--- a/CICloudGov/component.yaml
+++ b/CICloudGov/component.yaml
@@ -5,20 +5,12 @@ satisfies:
   covered_by:
   - verification_key: CONCOURSE_PIPELINE
   implementation_status: none
-  narrative:
-    b: 'Tests software and firmware updates related to flaw remediation for effectiveness
-      and potential side effects before installation.
-
-      '
-    c: 'Installs security-relevant software and firmware updates within 30 daysrelease
-      of updates of the release of the updates.
-
-      '
-    d: '18F incorporates flaw remediation into the its configuration management process.
-      New versions of Cloud.gov can easily recreated and deployed in the event of
-      any system flaws.
-
-      '
+  narrative: "#### b  \nTests software and firmware updates related to flaw remediation\
+    \ for effectiveness and potential side effects before installation.\n  \n####\
+    \ c  \nInstalls security-relevant software and firmware updates within 30 daysrelease\
+    \ of updates of the release of the updates.\n  \n#### d  \n18F incorporates flaw\
+    \ remediation into the its configuration management process. New versions of Cloud.gov\
+    \ can easily recreated and deployed in the event of any system flaws.\n  \n"
   standard_key: NIST-800-53
 schema_version: 2.0
 verifications:
