--- a/CA-Policy/component.yaml
+++ b/CA-Policy/component.yaml
@@ -4,8 +4,9 @@ satisfies:
 - control_key: CA-7
   covered_by: []
   implementation_status: none
-  narrative: |
-    In progress
+  narrative: 'In progress
+
+    '
   standard_key: NIST-800-53
 - control_key: CA-8 (1)
   covered_by:
@@ -21,33 +22,25 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: "The 18F Program develops a security assessment plan that describes the scope\
-      \ of the assessment including:\n  * Security controls and control enhancements\
-      \ under assessment\n  * Assessment procedures to be used to determine security\
-      \ control effectiveness\n  * Assessment environment, assessment team, and assessment\
-      \ roles and responsibilities\nCloud.Gov is designed for compliance with the\
-      \ Federal Risk and Authroization Management Plan and has adopted the FedRAMP\
-      \ Assessment and Authorization program as the basis for its Security and Priavacy\
-      \ compliance activities. Cloud.Gov engages a FedRAMP Accredited Third Pary Assessemt\
-      \ Organzation (3PAO) to develop a compliant security assessment plan.\n"
-    b: 'Cloud.Gov has engaged the 3PAO to assess the security controls in the information
-      system at least annually to determine the extent to which the controls are implemented
-      correctly, operation as intended, and producing the desired outcome with respoect
-      to meeting the security requirements for the system.
-
-      '
-    c: 'Cloud.Gov has engaged the 3PAO to produce a security assessment report that
-      documents the issues, test activities, findings, and recommendations from the
-      assessment.
-
-      '
-    d: '18F will deliver all documents used in or created during the assessment to
-      generate a complete FedRAMP Authorization package. The package is transmitted
-      to the FedRAMP Program Management Office (PMO) for submission to the FedRAMP
-      JAB
-
-      '
+  narrative: "#### a  \nThe 18F Program develops a security assessment plan that describes\
+    \ the scope of the assessment including:\n  * Security controls and control enhancements\
+    \ under assessment\n  * Assessment procedures to be used to determine security\
+    \ control effectiveness\n  * Assessment environment, assessment team, and assessment\
+    \ roles and responsibilities\nCloud.Gov is designed for compliance with the Federal\
+    \ Risk and Authroization Management Plan and has adopted the FedRAMP Assessment\
+    \ and Authorization program as the basis for its Security and Priavacy compliance\
+    \ activities. Cloud.Gov engages a FedRAMP Accredited Third Pary Assessemt Organzation\
+    \ (3PAO) to develop a compliant security assessment plan.\n  \n#### b  \nCloud.Gov\
+    \ has engaged the 3PAO to assess the security controls in the information system\
+    \ at least annually to determine the extent to which the controls are implemented\
+    \ correctly, operation as intended, and producing the desired outcome with respoect\
+    \ to meeting the security requirements for the system.\n  \n#### c  \nCloud.Gov\
+    \ has engaged the 3PAO to produce a security assessment report that documents\
+    \ the issues, test activities, findings, and recommendations from the assessment.\n\
+    \  \n#### d  \n18F will deliver all documents used in or created during the assessment\
+    \ to generate a complete FedRAMP Authorization package. The package is transmitted\
+    \ to the FedRAMP Program Management Office (PMO) for submission to the FedRAMP\
+    \ JAB\n  \n"
   standard_key: NIST-800-53
 - control_key: CA-3 (3)
   covered_by:
@@ -91,22 +84,16 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: 'The 18F Program Office develops, documents, and disseminates to all 18F staff
-
-      The 18F Security Assessnet and authorization policy which  addresses purpose,
-      scope, roles, responsibilities, management commitment, coordination among organizational
-      entities, and compliance and procedures to facilitate the implementation of
-      the security assessment and authroization policy and associated security assessnet
-      controls. The 18F security assessnet and authorization policy is listed within
-      its private Github repository that is accessible to all 18F staff.
-
-      '
-    b: 'The 18F Program Office will review and update the current 18F Security Assessment
-      policy at least every 3 years and any documented assessment procedures at least
-      annually.
-
-      '
+  narrative: "#### a  \nThe 18F Program Office develops, documents, and disseminates\
+    \ to all 18F staff\nThe 18F Security Assessnet and authorization policy which\
+    \  addresses purpose, scope, roles, responsibilities, management commitment, coordination\
+    \ among organizational entities, and compliance and procedures to facilitate the\
+    \ implementation of the security assessment and authroization policy and associated\
+    \ security assessnet controls. The 18F security assessnet and authorization policy\
+    \ is listed within its private Github repository that is accessible to all 18F\
+    \ staff.\n  \n#### b  \nThe 18F Program Office will review and update the current\
+    \ 18F Security Assessment policy at least every 3 years and any documented assessment\
+    \ procedures at least annually.\n  \n"
   standard_key: NIST-800-53
 - control_key: CA-2 (1)
   covered_by:
@@ -189,47 +176,33 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: '18F has developed a plan of action and milestones (POA&M) for the information
-      system which documents the remediation actions to correct weaknesses found or
-      deficiencies noted during the assessment of the security controls and to reduce
-      or eliminate known vulnerabilities.
-
-
-      The majority of vulnerabilities are found during continuous monitoring activities
-      including monthly vulnerability  scanning, updates to Cloud.Gov systems components,
-      static code analysis on applications and infrastucture and system monitoring
-      tools. The 18F ISSOs are tasked with developing plans of actions and milestones
-      for valid findings and vulnerabilities. The devops administrators are tasked
-      to mitigate high findings within 30 days, moderate findings within 60 days and
-      low findings within 120 days.
-
-      '
-    b: 'The 18F ISSOs updates the Cloud.Gov plan of action and milestones at least
-      monthly based on the findings from security controls assessments, security impacy
-      analysis, and continuous monitoring activites.
-
-      '
+  narrative: "#### a  \n18F has developed a plan of action and milestones (POA&M)\
+    \ for the information system which documents the remediation actions to correct\
+    \ weaknesses found or deficiencies noted during the assessment of the security\
+    \ controls and to reduce or eliminate known vulnerabilities.\n\nThe majority of\
+    \ vulnerabilities are found during continuous monitoring activities including\
+    \ monthly vulnerability  scanning, updates to Cloud.Gov systems components, static\
+    \ code analysis on applications and infrastucture and system monitoring tools.\
+    \ The 18F ISSOs are tasked with developing plans of actions and milestones for\
+    \ valid findings and vulnerabilities. The devops administrators are tasked to\
+    \ mitigate high findings within 30 days, moderate findings within 60 days and\
+    \ low findings within 120 days.\n  \n#### b  \nThe 18F ISSOs updates the Cloud.Gov\
+    \ plan of action and milestones at least monthly based on the findings from security\
+    \ controls assessments, security impacy analysis, and continuous monitoring activites.\n\
+    \  \n"
   standard_key: NIST-800-53
 - control_key: CA-6
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: '18F has assigned an Authorizing Official (AO) for the Cloud.Gov information
-      system. The designated AO is listed in Section 4 of the system security plan.
-
-      '
-    b: 'The Authorizing Official responsibilities include ensuring the Cloud.Gov information
-      system is assessed and authorized before going to an operational state. Authorization
-      descisions are based on the contenct of the
-
-      '
-    c: '18F updates the security authorzation of Cloud.Gov on an annual basis or when
-      there are significant changes within the information system. Significant changes
-      include,
-
-      '
+  narrative: "#### a  \n18F has assigned an Authorizing Official (AO) for the Cloud.Gov\
+    \ information system. The designated AO is listed in Section 4 of the system security\
+    \ plan.\n  \n#### b  \nThe Authorizing Official responsibilities include ensuring\
+    \ the Cloud.Gov information system is assessed and authorized before going to\
+    \ an operational state. Authorization descisions are based on the contenct of\
+    \ the\n  \n#### c  \n18F updates the security authorzation of Cloud.Gov on an\
+    \ annual basis or when there are significant changes within the information system.\
+    \ Significant changes include,\n  \n"
   standard_key: NIST-800-53
 schema_version: 2.0
 verifications:
