--- a/CM-Policy/component.yaml
+++ b/CM-Policy/component.yaml
@@ -5,57 +5,38 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: '18F uses established and documents configuration settings for its information
-      technology products employed within the Cloud Foundry platform that reflect
-      the most restrictive mode consistent with operational requirements. 18F follows
-      industry best practices and guidance provided in NIST Special Publication 800-70,
-      Security Configuration Checklist Program for IT Products
-
-      Infrastructure documented configuration settings:
-
-      DevOps and Security Engineers maintain the baseline configuration for VPC, EBS
-      and AMIs.  Best practices, FISMA compliant AMIs, and hardened cloud formation
-      templates are utilized as there are no benchmarks available. 18F uses the following
-      approved FISMA ready baselines located at https://github.com/fisma-ready
-
-      Cloud Foundry documented configuration settings:
-
-      18F follows Cloud Foundry best practices for configuring and implementing the
-      platform as a service. Configuration settings are documented within the deployment
-      manifest on the GitHub and Cloud Foundry websites. The following are approved
-      baseline configuration settings related to the Cloud Foundry platform as a service.
-      All documented configuration settings  related to Cloud Foundry are located  at
-      https://docs.18f.gov/ops/repos/.
-
-      '
-    b: '18F Implements the configuration settings based on its documented process
-      and practices. DevOps implements the configuration benchmarks identified in
-      Part a, maintains the baseline configuration for all cloud infrastructure and
-      Cloud Foundry components and is responsible for ensuring all systems are configured
-      in accordance with applicable hardening guides.
-
-      '
-    c: 'DevOps documents any exceptions to established baseline configurations for
-      all of 18F''s virtual infrastructure and information systems. 18F maintains
-      exception documents which detail specific items from the established configuration
-      settings which cannot be applied to instances due to operational requirements.
-
-      '
-    d: '18F Monitors and controls changes to the configuration settings in accordance
-      with its documented configuration management policy and procedures.
-
-      All Configuration Change Control:
-
-      DevOps and 18F system owners maintain the baseline configurations within 18F
-      Virtual Private Cloud. Configuration will be reviewed in real-time using automated
-      methods and at least quarterly to ensure no unauthorized changes were made to
-      the baseline configuration.
-
-      Internal vulnerability scans are performed at least on a quarterly basis in
-      the event that no enhancements or upgrades are performed.
-
-      '
+  narrative: "#### a  \n18F uses established and documents configuration settings\
+    \ for its information technology products employed within the Cloud Foundry platform\
+    \ that reflect the most restrictive mode consistent with operational requirements.\
+    \ 18F follows industry best practices and guidance provided in NIST Special Publication\
+    \ 800-70, Security Configuration Checklist Program for IT Products\nInfrastructure\
+    \ documented configuration settings:\nDevOps and Security Engineers maintain the\
+    \ baseline configuration for VPC, EBS and AMIs.  Best practices, FISMA compliant\
+    \ AMIs, and hardened cloud formation templates are utilized as there are no benchmarks\
+    \ available. 18F uses the following approved FISMA ready baselines located at\
+    \ https://github.com/fisma-ready\nCloud Foundry documented configuration settings:\n\
+    18F follows Cloud Foundry best practices for configuring and implementing the\
+    \ platform as a service. Configuration settings are documented within the deployment\
+    \ manifest on the GitHub and Cloud Foundry websites. The following are approved\
+    \ baseline configuration settings related to the Cloud Foundry platform as a service.\
+    \ All documented configuration settings  related to Cloud Foundry are located\
+    \  at https://docs.18f.gov/ops/repos/.\n  \n#### b  \n18F Implements the configuration\
+    \ settings based on its documented process and practices. DevOps implements the\
+    \ configuration benchmarks identified in Part a, maintains the baseline configuration\
+    \ for all cloud infrastructure and Cloud Foundry components and is responsible\
+    \ for ensuring all systems are configured in accordance with applicable hardening\
+    \ guides.\n  \n#### c  \nDevOps documents any exceptions to established baseline\
+    \ configurations for all of 18F's virtual infrastructure and information systems.\
+    \ 18F maintains exception documents which detail specific items from the established\
+    \ configuration settings which cannot be applied to instances due to operational\
+    \ requirements.\n  \n#### d  \n18F Monitors and controls changes to the configuration\
+    \ settings in accordance with its documented configuration management policy and\
+    \ procedures.\nAll Configuration Change Control:\nDevOps and 18F system owners\
+    \ maintain the baseline configurations within 18F Virtual Private Cloud. Configuration\
+    \ will be reviewed in real-time using automated methods and at least quarterly\
+    \ to ensure no unauthorized changes were made to the baseline configuration.\n\
+    Internal vulnerability scans are performed at least on a quarterly basis in the\
+    \ event that no enhancements or upgrades are performed.\n  \n"
   standard_key: NIST-800-53
 - control_key: CM-8
   covered_by:
@@ -99,71 +80,48 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: 'All Configuration Change control:
-
-      18F provisions its infrastructure with AWS CloudFormation, the AWS CloudFormation
-      template describes exactly what resources are provisioned and their settings.
-      Because these templates are text files, 18F can simply track differences in
-      these templates to track changes to its infrastructure, similar to the way developers
-      control revisions to source code.
-
-      18F uses version control systems with its cloud formation templates to know
-      exactly what changes were made, who made them, and when. If at any point 18F
-      needs to reverse changes to infrastructure, you can use a previous version of
-      a template.
-
-      18F uses GitHub for additional tracking and documenting of authorized changes
-      within the infrastructure and applications including Cloud Foundry platform
-      as a service. Within  GitHub, a diff function is used to compare and contrast
-      any changes made to configurations of Cloud Foundry.
-
-      '
-    b: '18F reviews proposed configuration-controlled changes to all of its information
-      systems and infrastructure and approves or disapproves such changes with explicit
-      consideration for security impact analysis within the Virtual Private Cloud
-      environment. All reviews and approvals are conducted within 18Fs GitHub ticketing
-      and tracking system.
-
-      '
-    c: "18F uses the following methods to document configuration change decisions\
-      \ associated with its information systems.\nFor changes related to the its virtual\
-      \ infrastructure, 18F uses VisualOps and Cloud Checkr for real-time configuration\
-      \ changes which are documented, approved and tracked within GitHub.\nAll Cloud\
-      \ Foundry configuration changes are documented, approved and tracked within\
-      \ 18 F\u2019s GitHub site.\nAll configuration changes related to applications\
-      \ and websites hosted within the 18F AWS and Cloud Foundry environment are requested\
-      \ by the systems owner and approved by DevOps within the 18F GitHub tracking\
-      \ systems.\n"
-    d: 'When configuration changes have been approved through 18F''s GitHub ticketing
-      and tracking system, the DevOps team implements approved configuration-controlled
-      changes to the information system and then provides a status of the changes
-      completed and closes out the ticket.
-
-      '
-    e: 'Records of configuration-controlled changes are retained for at least 1 year
-      in accordance with the 18F Configuration Management policy and utilizing the
-      18F GitHub site and S3 to store all changes requested, approved, disapproved,
-      implemented and pending.
-
-      '
-    f: 'Audits for the virtual infrastructure and Cloud Foundry platform as a service
-      and applications are conducted by DevOps, ISSOs and Cloud Foundry project manager
-      of all configuration-controlled changes to the information system.  These audits
-      take place no less than once a month and are documented in the GitHub ticketing
-      and tracking system, per the 18F Configuration management policy Section 3 which
-      states
-
-      18F will conduct a monthly audit of information system which identifies and
-      eliminates unnecessary functions, ports, protocols, and/or services.
-
-      '
-    g: '18F coordinates and provides oversight for configuration change control activities
-      through its GitHub tracking and ticketing systems and Slack communications channel
-      which is integrated with GitHub that convenes whenever there are significant
-      and pending changes to the 18F security, cloud infrastructure and applications.
-
-      '
+  narrative: "#### a  \nAll Configuration Change control:\n18F provisions its infrastructure\
+    \ with AWS CloudFormation, the AWS CloudFormation template describes exactly what\
+    \ resources are provisioned and their settings. Because these templates are text\
+    \ files, 18F can simply track differences in these templates to track changes\
+    \ to its infrastructure, similar to the way developers control revisions to source\
+    \ code.\n18F uses version control systems with its cloud formation templates to\
+    \ know exactly what changes were made, who made them, and when. If at any point\
+    \ 18F needs to reverse changes to infrastructure, you can use a previous version\
+    \ of a template.\n18F uses GitHub for additional tracking and documenting of authorized\
+    \ changes within the infrastructure and applications including Cloud Foundry platform\
+    \ as a service. Within  GitHub, a diff function is used to compare and contrast\
+    \ any changes made to configurations of Cloud Foundry.\n  \n#### b  \n18F reviews\
+    \ proposed configuration-controlled changes to all of its information systems\
+    \ and infrastructure and approves or disapproves such changes with explicit consideration\
+    \ for security impact analysis within the Virtual Private Cloud environment. All\
+    \ reviews and approvals are conducted within 18Fs GitHub ticketing and tracking\
+    \ system.\n  \n#### c  \n18F uses the following methods to document configuration\
+    \ change decisions associated with its information systems.\nFor changes related\
+    \ to the its virtual infrastructure, 18F uses VisualOps and Cloud Checkr for real-time\
+    \ configuration changes which are documented, approved and tracked within GitHub.\n\
+    All Cloud Foundry configuration changes are documented, approved and tracked within\
+    \ 18 F\u2019s GitHub site.\nAll configuration changes related to applications\
+    \ and websites hosted within the 18F AWS and Cloud Foundry environment are requested\
+    \ by the systems owner and approved by DevOps within the 18F GitHub tracking systems.\n\
+    \  \n#### d  \nWhen configuration changes have been approved through 18F's GitHub\
+    \ ticketing and tracking system, the DevOps team implements approved configuration-controlled\
+    \ changes to the information system and then provides a status of the changes\
+    \ completed and closes out the ticket.\n  \n#### e  \nRecords of configuration-controlled\
+    \ changes are retained for at least 1 year in accordance with the 18F Configuration\
+    \ Management policy and utilizing the 18F GitHub site and S3 to store all changes\
+    \ requested, approved, disapproved, implemented and pending.\n  \n#### f  \nAudits\
+    \ for the virtual infrastructure and Cloud Foundry platform as a service and applications\
+    \ are conducted by DevOps, ISSOs and Cloud Foundry project manager of all configuration-controlled\
+    \ changes to the information system.  These audits take place no less than once\
+    \ a month and are documented in the GitHub ticketing and tracking system, per\
+    \ the 18F Configuration management policy Section 3 which states\n18F will conduct\
+    \ a monthly audit of information system which identifies and eliminates unnecessary\
+    \ functions, ports, protocols, and/or services.\n  \n#### g  \n18F coordinates\
+    \ and provides oversight for configuration change control activities through its\
+    \ GitHub tracking and ticketing systems and Slack communications channel which\
+    \ is integrated with GitHub that convenes whenever there are significant and pending\
+    \ changes to the 18F security, cloud infrastructure and applications.\n  \n"
   standard_key: NIST-800-53
 - control_key: CM-1
   covered_by: []
