--- a/IA-Policy/component.yaml
+++ b/IA-Policy/component.yaml
@@ -5,20 +5,17 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: "The 18F Program Office develops, documents, and disseminates to all 18F staff,\n\
-      The 18F Identification and Authentication Policy which addresses purpose, scope,\
-      \ roles, responsibilities, management commitment, coordination among organizational\
-      \ entities, ompliance and procedures to facilitate the implementation of the\
-      \ identification and authentication policy and associated identification controls.\
-      \ The 18F Identification and Authentication Policy is listed within 18F\u2019\
-      s  private Github repository and the docs.cloud.gov site that is accessible\
-      \ to all 18F staff.\n"
-    b: 'The 18F Program Office will review and update the current 18F Identification
-      and Authentication Policy at least every 3 years and any documented identification
-      and authentication procedures at least annually.
-
-      '
+  narrative: "#### a  \nThe 18F Program Office develops, documents, and disseminates\
+    \ to all 18F staff,\nThe 18F Identification and Authentication Policy which addresses\
+    \ purpose, scope, roles, responsibilities, management commitment, coordination\
+    \ among organizational entities, ompliance and procedures to facilitate the implementation\
+    \ of the identification and authentication policy and associated identification\
+    \ controls. The 18F Identification and Authentication Policy is listed within\
+    \ 18F\u2019s  private Github repository and the docs.cloud.gov site that is accessible\
+    \ to all 18F staff.\n  \n#### b  \nThe 18F Program Office will review and update\
+    \ the current 18F Identification and Authentication Policy at least every 3 years\
+    \ and any documented identification and authentication procedures at least annually.\n\
+    \  \n"
   standard_key: NIST-800-53
 - control_key: IA-4
   covered_by: []
