--- a/IAM/component.yaml
+++ b/IAM/component.yaml
@@ -65,35 +65,26 @@ satisfies:
 - control_key: AC-5
   covered_by: []
   implementation_status: none
-  narrative:
-    a: '18F  implements Identity and Access Management (IAM) Policies roles and  individual
-      user accounts for separation of duties.  IAM policies are attached to the users,
-      enabling centralized control of permissions for users under 18Fs AWS Account.
-
-      '
-    b: '18F documents separation of duties of AWS and Cloud Foundry users. All AWS
-      IAM users, groups and roles can be viewed wthin the AWS console. IAM users reports
-      are generated to show all separation of duties. Cloud Checkr also generates
-      an a report of all IAM users within 18F AWS environment.
-
-      '
+  narrative: "#### a  \n18F  implements Identity and Access Management (IAM) Policies\
+    \ roles and  individual user accounts for separation of duties.  IAM policies\
+    \ are attached to the users, enabling centralized control of permissions for users\
+    \ under 18Fs AWS Account.\n  \n#### b  \n18F documents separation of duties of\
+    \ AWS and Cloud Foundry users. All AWS IAM users, groups and roles can be viewed\
+    \ wthin the AWS console. IAM users reports are generated to show all separation\
+    \ of duties. Cloud Checkr also generates an a report of all IAM users within 18F\
+    \ AWS environment.\n  \n"
   standard_key: NIST-800-53
 - control_key: AC-14
   covered_by: []
   implementation_status: none
-  narrative:
-    a: 'There are no user or administrative actions than can be performed within 18F
-      virtual private cloud without multifactor authentication.  Per AWS, users can
-      not gain access to the AWS console without identification and authorization
-      to its a vpc.
-
-      '
-    b: 'It is not possible for members of the 18F Devops and SecOps teams to aceess
-      the 18F virtual private cloud infrastructure without muitifactor authetication
-      and identification. All clinet users of Cloud.gov must login using authenticated
-      credentials in order to access the system as stated in Part A above.
-
-      '
+  narrative: "#### a  \nThere are no user or administrative actions than can be performed\
+    \ within 18F virtual private cloud without multifactor authentication.  Per AWS,\
+    \ users can not gain access to the AWS console without identification and authorization\
+    \ to its a vpc.\n  \n#### b  \nIt is not possible for members of the 18F Devops\
+    \ and SecOps teams to aceess the 18F virtual private cloud infrastructure without\
+    \ muitifactor authetication and identification. All clinet users of Cloud.gov\
+    \ must login using authenticated credentials in order to access the system as\
+    \ stated in Part A above.\n  \n"
   standard_key: NIST-800-53
 - control_key: AC-3
   covered_by: []
@@ -110,19 +101,15 @@ satisfies:
 - control_key: AC-2
   covered_by: []
   implementation_status: none
-  narrative:
-    a: "AWS accounts are managed through AWS Identity and Access Management (IAM).\
-      \ Only users with a need to operate the AWS management console are provided\
-      \ individual AWS user accounts. The following types are used:\n  * User \u2013\
-      \ Individual IAM accounts\n  * System \u2013 system and application account\
-      \ not used for interactive access\nThere are no guest/anonymous, groups, or\
-      \ temporary user accounts in the 18F Environment\n"
-    k: '18F does not allow shared/group account credentials within the AWS environment.
-      All users have individual accounts to access the AWS environment. 18F has created
-      specific policies that allow individual users to assume a role within the AWS
-      environment.
-
-      '
+  narrative: "#### a  \nAWS accounts are managed through AWS Identity and Access Management\
+    \ (IAM). Only users with a need to operate the AWS management console are provided\
+    \ individual AWS user accounts. The following types are used:\n  * User \u2013\
+    \ Individual IAM accounts\n  * System \u2013 system and application account not\
+    \ used for interactive access\nThere are no guest/anonymous, groups, or temporary\
+    \ user accounts in the 18F Environment\n  \n#### k  \n18F does not allow shared/group\
+    \ account credentials within the AWS environment. All users have individual accounts\
+    \ to access the AWS environment. 18F has created specific policies that allow\
+    \ individual users to assume a role within the AWS environment.\n  \n"
   standard_key: NIST-800-53
 - control_key: AC-6 (5)
   covered_by: []
