--- a/RA-Policy/component.yaml
+++ b/RA-Policy/component.yaml
@@ -10,37 +10,26 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative:
-    a: '18F Conducts monthly Operating System (OS) and web application scanning; quarterly
-      database scanning; and, OS and Web application scanning with every code release.
-      18F conducts internal vulnerabilty scanning of its VPC and private subnets within
-      the 18F Virtual Private Cloud.
-
-      '
-    b: '18F vulnerabilty scanning toos utilize techniques that promote interoperability
-      such as Common Vulnerability Scoring System v2 (CVSS2), Common Platform Enumeration
-      (CPE), and Common Vulnerability Enumeration (CVE) and OWASP TOP 10 vulnerabilities.
-
-      '
-    c: '18F Analyzes vulnerability scan reports from its vulnerabilty scanning tools
-      assessments at least weekly and appropriate actions taken on discovery of vulnerabilities
-      within the 18F Cloud Infrastructure and applications and from security control
-      assessments conducted on its information systems.
-
-      '
-    d: 'High-risk vulnerabilities are mitigated within thirty days (30); moderate
-      risk vulnerabilities mitigated within ninety days (90). If the recommended steps
-      will adversely impact functionality or performance, the ISSO/ISSM will reviews
-      changes and mitigating controls with 18F DevOps as well as the Cloud Foundry
-      system owners.
-
-      '
-    e: '18F shares information obtained from the vulnerability scanning process and
-      security control assessments with designated System Owners, DevOPs, GSA SecOps,
-      ISSM and the Authorizing Official (AO) to help eliminate similar vulnerabilities
-      in other information systems (i.e., systemic weaknesses or deficiencies).
-
-      '
+  narrative: "#### a  \n18F Conducts monthly Operating System (OS) and web application\
+    \ scanning; quarterly database scanning; and, OS and Web application scanning\
+    \ with every code release. 18F conducts internal vulnerabilty scanning of its\
+    \ VPC and private subnets within the 18F Virtual Private Cloud.\n  \n#### b  \n\
+    18F vulnerabilty scanning toos utilize techniques that promote interoperability\
+    \ such as Common Vulnerability Scoring System v2 (CVSS2), Common Platform Enumeration\
+    \ (CPE), and Common Vulnerability Enumeration (CVE) and OWASP TOP 10 vulnerabilities.\n\
+    \  \n#### c  \n18F Analyzes vulnerability scan reports from its vulnerabilty scanning\
+    \ tools assessments at least weekly and appropriate actions taken on discovery\
+    \ of vulnerabilities within the 18F Cloud Infrastructure and applications and\
+    \ from security control assessments conducted on its information systems.\n  \n\
+    #### d  \nHigh-risk vulnerabilities are mitigated within thirty days (30); moderate\
+    \ risk vulnerabilities mitigated within ninety days (90). If the recommended steps\
+    \ will adversely impact functionality or performance, the ISSO/ISSM will reviews\
+    \ changes and mitigating controls with 18F DevOps as well as the Cloud Foundry\
+    \ system owners.\n  \n#### e  \n18F shares information obtained from the vulnerability\
+    \ scanning process and security control assessments with designated System Owners,\
+    \ DevOPs, GSA SecOps, ISSM and the Authorizing Official (AO) to help eliminate\
+    \ similar vulnerabilities in other information systems (i.e., systemic weaknesses\
+    \ or deficiencies).\n  \n"
   standard_key: NIST-800-53
 schema_version: 2.0
 system: 18F
