--- a/SC-Policy/component.yaml
+++ b/SC-Policy/component.yaml
@@ -4,11 +4,9 @@ satisfies:
 - control_key: SC-7
   covered_by: []
   implementation_status: none
-  narrative:
-    b: '18F Implements subnetworks for publicly accessible system components that
-      are logically separated from internal organizational networks
-
-      '
+  narrative: "#### b  \n18F Implements subnetworks for publicly accessible system\
+    \ components that are logically separated from internal organizational networks\n\
+    \  \n"
   standard_key: NIST-800-53
 - control_key: SC-12 (1)
   covered_by:
